<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- General -->
    <string name="app_name">Paper Plane in Space</string>
    <string name="app_title">Paper Plane</string>
    <string name="app_subtitle">in Space</string>

    <!-- Authentication -->
    <string name="auth_achievements_unavailable">Please sign in to view Achievements.</string>
    <string name="auth_leaderboards_unavailable">Please sign in to view Leaderboards.</string>

    <!-- Main Menu -->
    <string name="fragment_menu_item_start">New Game</string>
    <string name="fragment_menu_item_achievements">Achievements</string>
    <string name="fragment_menu_item_leaderboards">Leaderboards</string>
    <string name="fragment_menu_quit_dialog_title">Quit?</string>
    <string name="fragment_menu_quit_dialog_message">Are you sure you want to quit?</string>
    <string name="fragment_menu_sign_in_text">Sign in with Google to share your scores and achievements with friends.</string>
    <string name="fragment_menu_sign_out"><u>Sign Out</u></string>
    <string name="fragment_menu_sign_out_dialog_title">Sign Out?</string>
    <string name="fragment_menu_sign_out_dialog_message">Are you sure you want to sign out?</string>
    <string name="fragment_menu_welcome_message_default">You are signed in with Google.</string>
    <string name="fragment_menu_welcome_message">Welcome, <xliff:g example="Matt" id="name">%1$s</xliff:g>!</string>
    <string name="fragment_menu_time_best">Best Time:\n<xliff:g example="22.220 s" id="time">%1$s</xliff:g></string>
    <string name="fragment_menu_distance_best">Best Distance:\n<xliff:g example="1,200 km" id="distance">%1$s</xliff:g></string>
    <string name="fragment_menu_time_previous">Previous Time:\n<xliff:g example="22.220 s" id="time">%1$s</xliff:g></string>
    <string name="fragment_menu_distance_previous">Previous Distance:\n<xliff:g example="1,200 km" id="distance">%1$s</xliff:g></string>

    <!-- Gameplay -->
    <string name="fragment_gameplay_overlay_paused">Paused</string>
    <string name="fragment_gameplay_directions_movement">Swipe to Accelerate, Tap to Stop</string>
    <string name="fragment_gameplay_ready">Ready?</string>
    <string name="fragment_gameplay_restart">Restart</string>
    <string name="fragment_gameplay_gameover">Game Over</string>
    <string name="fragment_gameplay_gameover_time">Time:\n<xliff:g example="22.220 s" id="time">%1$s</xliff:g></string>
    <string name="fragment_gameplay_gameover_distance">Distance:\n<xliff:g example="1,200 ft" id="distance">%1$s</xliff:g></string>
    <string name="fragment_gameplay_time"><xliff:g example="22.220 s" id="time">%1$s</xliff:g></string>
    <string name="fragment_gameplay_distance"><xliff:g example="1,200 km" id="distance">%1$s</xliff:g></string>
    <string name="fragment_gameplay_time_default">0.000 s</string>
    <string name="fragment_gameplay_distance_default">0 ft</string>

    <!-- Errors -->
    <string name="error_auth">Failed to sign in. Please try again later.</string>
    <string name="error_misconfigured">Misconfigured app. Please try again later.</string>
    <string name="error_license">License issue. Please try again later.</string>

</resources>