<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/fragment_gameplay_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center"
            android:text="@string/fragment_gameplay_time_default"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/fragment_gameplay_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/fragment_gameplay_distance_default"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.ambergleam.android.paperplane.view.GameplayView
            android:id="@+id/fragment_gameplay_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/fragment_gameplay_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_overlay"
            android:gravity="center"
            android:padding="@dimen/padding_large"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            tools:text="@string/fragment_gameplay_overlay_paused"
            tools:visibility="visible"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:padding="@dimen/padding_small">

        <ImageView
            android:id="@+id/fragment_gameplay_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_restart"
            android:tint="@android:color/white"
            />

        <ImageView
            android:id="@+id/fragment_gameplay_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_pause"
            android:tint="@android:color/white"
            android:visibility="visible"
            />

        <ImageView
            android:id="@+id/fragment_gameplay_unpause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_play"
            android:tint="@android:color/white"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/fragment_gameplay_directions_movement"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_medium"
            />

    </FrameLayout>

</LinearLayout>